tools/tests/errors/surf_parse_12.experr
error: expected a member name after '.'